--- a/ass.html
+++ b/ass.html
@@ -65,7 +65,7 @@
                         <img src="pro1.jpg" class="card-img-top" alt="Project 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Project 1</h5>
-                            <p class="card-text">CSR Project.</p>
+                            <p class="card-text">CSR Project. Here, children were taught about Python language.</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                         <img src="pro2.jpg" class="card-img-top" alt="Project 2">
                         <div class="card-body text-center">
                             <h5 class="card-title">Project 2</h5>
-                            <p class="card-text">Arduino Competition.</p>
+                            <p class="card-text">Arduino Competition. Here, A programmed arduino motor is driven along the tracks.</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                         <img src="pro3.jpg" class="card-img-top" alt="Project 3">
                         <div class="card-body text-center">
                             <h5 class="card-title">Project 3</h5>
-                            <p class="card-text">Libary Managment System.</p>
+                            <p class="card-text">Libary Managment System. This system helps to facilitate the operations of a library.</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
